# pal-onnx

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.code_quality/: ruff.toml
.github/workflows/: ci.yml
notebooks/onnx/: operator_sets.ipynb  tokenizer.ipynb
src/app/data/: run_etl.py  training_dataset.py
src/app/model/: dummy.py  train.py
src/app/mpi/: main.py  start_api.py
src/core/conf/: settings.py
src/core/onnx/: mapper.py  numericalizer.py  tokenizer.py
src/core/pal/: example.py
tests/: conftest.py  test_data.py  test_mpi.py  test_train.py
