
[tool.poetry]
name = "pal-onnx"
version = "0.1.0"
description = "PAL framework with onnx exporting"
authors = ["Enzo Faliveni <enzofali.ef@gmail.com>"]

packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.1"
onnx = "^1.16.1"
onnxruntime = "^1.18.1"
torch = "2.0.1"
fastapi = "^0.112.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[pytest.ini_options]
addopts = "--verbose --junit-xml=report.xml --disable-warnings"
pythonpath = [
    "src",
]
testpaths = "tests"

[tool.poetry.scripts]
start-api = "src.app.mpi.start_api:start"